# ABMShare

./: .gitignore  MANIFEST.in  README.md  hello.py  new_simulation.json  pyproject.toml  requirements.txt  setup.py  test_radim_git.py
ShareSim/: start.bat  start.sh
ShareSim/input_data/simulation_configuration_files/: simulation_interventions.csv
ShareSim/input_data/simulation_immunity_files/: variants_pars.csv
ShareSim/input_data/synthpops_configuration_files/: pars_file.csv  synthpops_input_files.csv  synthpops_region.csv
ShareSim/input_data/synthpops_input_data/: example_employment_rates_by_age.csv
ShareSim_defaults/: default_start.sh
ShareSim_defaults/input_data/simulation_immunity_files/: immunity_input_files.csv
ShareSim_defaults/input_data_orig/simulation_configuration_files/: population_age_distributions.csv
abmShare_sandbox/: meta_start.sh  parameters.py  results.sh  start.sh
abmShare_sandbox/input_data/: main_configuration.json  simulation_configuration.json  synthpops_configuration.json
abmShare_sandbox/input_data/data/: NUTS2_mobility_data.csv  population_age_distributions.csv
abmShare_testing_sandbox/input_data/: share_extension_configuration.json  synthpops_configuration.json
abmShare_testing_sandbox/input_data/simulation_configuration_files/: simulation_region_pars.csv  simulation_variants.csv
abmShare_testing_sandbox/input_data/simulation_immunity_files/: vaccine_variant_pars.csv  (+1 more)
abmShare_testing_sandbox/input_data_orig/: simulation_configuration.json
abmshare/: __init__.py  abm_share_start.py  change_paths.py  defaults.py  extension_controller.py  utils.py
abmshare/covasim_ex/: immunity_process.py  intervention_process.py  mobility.py  region.py  simulation_conf_getter.py  simulation_controller.py  simulation_creator.py  zold_configuration_holder.py  zold_default_utils.py  zold_mobility.py  zold_mobility_sim.py  zold_simulation_conf_getter.py
abmshare/grid_compute_ex/: grid_base_configuration  grid_change_paths.py  grid_change_testing.py  grid_compute_controller.py  grid_process.sh  grid_utils.py  meta_start_pattern.sh
abmshare/report_ex/: report_ex_controller.py  report_utils.py
abmshare/synthpops_ex/: old_pop_creator.py  old_region_config_creator.py  old_synthpop_conf_getter.py  old_synthpops_process.py  region.py  region_config_creator.py  synthpops_conf_getter.py  synthpops_controller.py
abmshare/validator/: csv_validator.py  exceptions.py  json_validator.py  validator.py  validator_defaults.py
covasim/: __init__.py  analysis.py  base.py  defaults.py  immunity.py  interventions.py  misc.py  parameters.py  people.py  plotting.py  population.py  requirements.py  run.py  settings.py  sim.py  utils.py  version.py
covasim/data/: household_size_data.py  loaders.py
data/example_data/: CZ_NUTS2_mobility.xlsx  CZ_NUTS2_population_distrib.xlsx  NUTS2_age_distribution.csv  employment_rates_by_age.csv  enrollment_rates_by_age.csv  household_head_age_brackets.csv  household_head_age_distribution_by_family_size.csv  population_age_distributions.csv  school_size_distribution.csv  school_size_distribution_by_type.csv  school_types_by_age.csv
docs/: .gitignore
docs/docs/: Downloads.md  Synthetic_pop_settings.md  index.md
extensions/: abm_share_start.py  extension_controller.py  utils.py
extensions/covasim_ex/: default_utils.py  immunity_process.py  intervention_process.py  mobility.py  region.py  simulation_conf_getter.py  simulation_controller.py  simulation_creator.py  zold_configuration_holder.py  zold_mobility.py  zold_mobility_sim.py  zold_simulation_conf_getter.py
extensions/grid_compute_ex/: TODO.txt  download_data.py  grid_change_paths.py  grid_change_testing.py  grid_compute_controller.py  grid_utils.py
extensions/report_ex/: report_ex_controller.py  report_utils.py
extensions/synthpops_ex/: old_pop_creator.py  old_region_config_creator.py  old_synthpop_conf_getter.py  old_synthpops_process.py  region.py  region_config_creator.py  synthpops_conf_getter.py  synthpops_controller.py
extensions/validator/: csv_validator.py  exceptions.py  json_validator.py  validator.py  validator_defaults.py
synthpops/: __init__.py  base.py  config.py  contact_networks.py  data.py  data_distributions.py  defaults.py  households.py  ltcfs.py  plotting.py  pop.py  sampling.py  schools.py  version.py  workplaces.py
synthpops/people/: __init__.py  country_age_data.py  household_size_data.py  loaders.py  makepop.py  people.py  state_age_data.py  utils.py
(+20 files in other folders)
