[project]
name = "abmshare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.1",
    "asttokens==3.0.0",
    "bz2file==0.98",
    "cffi==1.17.1",
    "click==8.1.8",
    "cmasher==1.9.2",
    "cmocean==4.0.3",
    "colorlog==6.9.0",
    "colorspacious==1.1.2",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cryptography==44.0.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "deepdiff==8.2.0",
    "dill==0.3.9",
    "editorconfig==0.17.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fire==0.7.0",
    "fonttools==4.56.0",
    "ghp-import==2.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "graphviz==0.20.3",
    "greenlet==3.1.1",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "jellyfish==1.1.3",
    "jinja2==3.1.5",
    "jsbeautifier==1.15.3",
    "jsonobject==2.2.0",
    "jsonpickle==4.0.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "mako==1.3.9",
    "markdown==3.3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.8.3",
    "matplotlib-inline==0.1.7",
    "memory-profiler==0.61.0",
    "mergedeep==1.3.4",
    "mkdocs==1.4.2",
    "mkdocs-autorefs==1.4.0",
    "mkdocs-section-index==0.3.9",
    "mkdocstrings==0.19.1",
    "multiprocess==0.70.17",
    "narwhals==1.28.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.61.0",
    "numpy==1.26.0",
    "openpyxl==3.1.5",
    "optuna==4.2.1",
    "orderly-set==5.3.0",
    "packaging==24.2",
    "pandas==2.2.2",
    "parestlib==0.4.0",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly==6.0.0",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydot==3.0.4",
    "pygments==2.19.1",
    "pymdown-extensions==10.4",
    "pyparsing==3.2.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "pytictoc==1.5.3",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "pyzmq==26.2.1",
    "scipy==1.15.2",
    "sciris==3.2.0",
    "seaborn==0.13.2",
    "setuptools==75.8.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sqlalchemy==2.0.38",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "termcolor==2.5.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "xlsxwriter==3.2.2",
    "zstandard==0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "C4",
    "SIM",
    "PTH",
    "FBT",
    "A",
    "COM",
    "Q",
    "RET",
    "ARG",
    #"ERA",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "C4",
    "SIM",
    "PTH",
    "FBT",
    "A",
    "COM",
    "Q",
    "RET",
    "ARG",
    #"ERA",
]