[project]
name = "abmshare"
version = "0.3.2"
description = "ABMShare app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bz2file>=0.98",
    "cmasher>=1.9.2",
    "cmocean>=4.0.3",
    "cryptography>=44.0.1",
    "deepdiff>=8.2.0",
    "fire>=0.7.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jsbeautifier>=1.15.3",
    "jsonobject==2.2.0",
    "markdown>=3.3.7",
    "matplotlib==3.8.3",
    "mkdocs==1.4.2",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings==0.19.1",
    "networkx>=3.4.2",
    "numba>=0.61.0",
    "numpy==2.0.0",
    "optuna>=4.2.1",
    "pandas==2.2.2",
    "parestlib>=0.4.0",
    "plotly>=6.0.0",
    "pydot>=3.0.4",
    "pytest>=8.3.4",
    "pytictoc>=1.5.3",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "sciris==3.2.0",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
lint = [
  "ruff"
]


[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "ANN",
    "C4",
    "SIM",
    "PTH",
    "FBT",
    "A",
    "COM",
    "Q",
    "RET",
    "ARG",
    #"ERA",
]
